--- a/packages/core/src/ui/styles/globals.css
+++ b/packages/core/src/ui/styles/globals.css
@@ -4,6 +4,10 @@
    CUSTOM PROPERTIES
    ========================================================================== */
 
+body {
+	-webkit-font-smoothing: auto;
+}
+
 :root {
 	--text-link: oklch(45.92% 0.0149 300.97);
 	--hover-filter: brightness(50%);
@@ -119,9 +123,8 @@ html select {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-top: 1px solid var(--border);
-	padding-top: 6px;
-	padding-bottom: 6px;
+	padding-top: 4px;
+	padding-bottom: 4px;
 }
 
 .unified-header__subnav {
@@ -133,7 +136,7 @@ html select {
 .unified-header__subnav a {
 	color: var(--accent);
 	text-decoration: none;
-	font-size: 0.8rem;
+	font-size: 0.9rem;
 }
 
 .unified-header__subnav a.active {
@@ -157,7 +160,7 @@ html select {
 	}
 	.unified-header__subnav {
 		gap: 4px;
-		font-size: 0.7rem;
+		font-size: 0.8rem;
 	}
 }
 
